--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ressource-loader",
+  "name": "load-ressources",
   "version": "1.0.0",
   "description": "Load scripts and stylesheets with JavaScript.",
-  "main": "ressource-loader.js",
+  "main": "load-ressources.js",
   "author": "Tobias Hennig <tobias.hennig1@gmail.com>"
 }
